# MultiplayerEditor

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
libs/enet/: CMakeLists.txt
libs/enet/include/enet/: enet.h
src/: main.cpp
src/hooks/: EditorHooks.cpp  EditorPauseLayer.cpp  MenuLayer.cpp  SetupTriggerPopup.cpp
src/network/: NetworkManager.cpp  NetworkManager.hpp  Packets.hpp
src/sync/: SyncManager.cpp  SyncManager.hpp
src/ui/: HostPopup.cpp  HostPopup.hpp  JoinPopup.cpp  JoinPopup.hpp  Popups.cpp  Popups.hpp
src/utils/: MouseTooltip.cpp  MouseTooltip.hpp
